# precisely-milestone2-nl2fta-prototype

./: .codecov.yml  .env.example  .gitattributes  .gitignore  FTA_LIST_TYPE_REQUIREMENTS.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  nl2fta-admin-policy.json  nl2fta-user-policy.json  test.csv
backend/: .gitignore  (+4 more)
evaluator/: .gitignore  README.md  pyproject.toml  requirements.lock.txt
evaluator/datasets/: README.md
evaluator/generated_semantic_types/: banking_description1_20250810_165909.json  banking_description1_20250828_212212.json  banking_description1_20250828_214721.json  banking_description1_20250828_214938.json  banking_description1_20250828_215741.json  banking_description1_20250828_220640.json  banking_description1_20250828_221437.json  banking_description1_20250828_221704.json  banking_description1_20250828_221834.json  banking_description1_20250828_222409.json  banking_description1_20250829_012741.json  banking_description2_20250810_170045.json  banking_description2_20250828_190549.json  banking_description2_20250828_190835.json  banking_description3_20250810_171250.json  banking_description3_20250828_190549.json  banking_description3_20250828_190835.json  banking_description4_20250810_171553.json  banking_description4_20250828_190549.json  banking_description4_20250828_190835.json  banking_description5_20250810_171730.json  banking_description5_20250828_190549.json  banking_description5_20250828_190835.json  banking_description6_20250810_172253.json  banking_description6_20250828_190549.json  banking_description6_20250828_190835.json  (+79 more)
(+7204 files in other folders)
