[tool.poetry]
name = "nl2fta-evaluator"
version = "0.1.0"
description = "NL2FTA Evaluation Framework"
authors = ["NL2FTA Team <devnull@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = ">=2.2.0"
numpy = ">=1.26.0"
scikit-learn = ">=1.3.0,<2.0.0"
requests = ">=2.31.0,<3.0.0"
urllib3 = ">=1.26.18,<1.27"
PyYAML = ">=6.0.0,<7.0.0"
tqdm = ">=4.65.0,<5.0.0"
colorama = ">=0.4.6"
rich = ">=13.7.0"
plotext = ">=5.3.0"
boto3 = ">=1.26.0,<2.0.0"
botocore = ">=1.29.0,<2.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


